Fix body width when scrollbar present

--- a/src/sass/page/_layout.scss
+++ b/src/sass/page/_layout.scss
@@ -6,9 +6,15 @@ html, body {
     box-sizing: border-box;
 }
 
+html {
+    // Hide overflow X in tandem with body: 100vw below
+    overflow-x: hidden;
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     background: #ebeef0;
+    width: calc(100vw); // Fix for body content jumping with scrollbars
 }
 
 .container {
